deploy/brewcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brewcloud-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # SSL yönlendirme ayarı
spec:
  rules:
  - host: app.brewcloud.com.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-service  # Angular için service adı
            port:
              number: 80           # Angular servisi portu
  - host: api.brewcloud.com.tr
    http:
      paths:
      - path: /api1
        pathType: Prefix
        backend:
          service:
            name: gateway-api-service  # Gateway API için service adı
            port:
              number: 5000             # Gateway API servisi portu
      - path: /api2
        pathType: Prefix
        backend:
          service:
            name: account-api-service  # Account API için service adı
            port:
              number: 5012             # Account API servisi portu
